resolved issue with css for jumping to top of page

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ p {
     margin-left: auto;
     margin-right: auto;
     width: 35em;
-    padding-top: 75px;
+    padding-top: 50px;
 }
 
 .container {
@@ -92,7 +92,6 @@ a:active {
     color: white;
     font-family: 'Inconsolata', monospace;
     display: flex;
-    height: 15em;
     align-items: center; 
 
 }
@@ -116,4 +115,14 @@ a:active {
 tab {
   display: inline-block;
   margin-left: 40px;
+}
+
+.top{
+  color: rgb(157, 64, 219);
+  font-family: 'Inconsolata', monospace;
+  margin-left: auto;
+  margin-right: auto;
+  width: 35em;
+  text-align: right;
+  padding-bottom: 5em;
 }
